# num8-lup

./: .gitignore  CMakeLists.txt  NUM8LORA_ASYNC_SPLIT_API.md  NUM8LORA_DLL_API.md  README.md  Specification..md  num8lora_async_test.c  num8lora_num8_test.c  num8lora_op.c  num8lora_receiver.c  num8lora_receiver.h  num8lora_runtime.c  num8lora_runtime_test.c  num8lora_sender.c  num8lora_test.c
.github/workflows/: ci.yml  release.yml
cmake/: num8loraConfig.cmake.in
docs/: ASYNC_SPLIT_API.md  DEPLOYMENT_CHECKLIST.md  GITHUB_METADATA.md  LEGACY_DLL_API.md  PUBLISHING_CHECKLIST.md  QUICKSTART.md  RECEIVER_API.md  SENDER_API.md  SPECIFICATION.md  WIRE_FORMAT.md
examples/: async_demo.c
include/: num8lora.h  num8lora_metadata.h  num8lora_op.h  num8lora_receiver.h  num8lora_sender.h
src/: num8lora.c  num8lora_codec.c  num8lora_codec.h  num8lora_meta.c  num8lora_metadata.c  num8lora_num8_bridge.c  num8lora_op.c  num8lora_receiver.c  num8lora_runtime.c  num8lora_sender.c
tests/: check_hosted_metadata_off.cmake  check_num8_adapter_request_fail.cmake  check_package_install_consumer.cmake  header_smoke_cpp.cpp  header_smoke_mtu_a.c  header_smoke_mtu_b.c  header_smoke_num8lora.c  header_smoke_num8lora_metadata.c  header_smoke_num8lora_op.c  header_smoke_num8lora_receiver.c  header_smoke_num8lora_sender.c  header_smoke_repeat.c  num8lora_adapter_config_test.c  num8lora_async_test.c  num8lora_codec_contract_test.c  num8lora_flow_num8_test.c  num8lora_metadata_test.c  num8lora_op_test.c  num8lora_runtime_test.c  num8lora_test.c
tests/package_consumer/: CMakeLists.txt  async_consumer.c  legacy_consumer.c  metadata_consumer.c
wiki/: API-Overview.md  Home.md  Legacy-API.md  Protocol.md  Publishing.md  Quickstart.md  _Sidebar.md
